feat: socks5 proxy and kill switch